--- a/templates/rest_framework/base.html
+++ b/templates/rest_framework/base.html
@@ -202,7 +202,7 @@
                         {% with form=post_form %}
                           <form action="{{ request.get_full_path }}" method="POST" enctype="multipart/form-data" class="form-horizontal" novalidate>
                             <fieldset>
-                              {% csrf_token %}
+                              <!-- {% csrf_token %} -->
                               {{ post_form }}
                               <div class="form-actions">
                                 <button class="btn btn-primary js-tooltip" title="Make a POST request on the {{ name }} resource">POST</button>
@@ -287,15 +287,15 @@
     {% endif %}
 
     {% block script %}
-      <script>
+      <!-- <script>
         window.drf = {
           csrfHeaderName: "{{ csrf_header_name|default:'X-CSRFToken' }}",
           csrfToken: "{% if request %}{{ csrf_token }}{% endif %}"
         };
-      </script>
+      </script> -->
       <script src="{% static "rest_framework/js/jquery-3.5.1.min.js" %}"></script>
       <script src="{% static "rest_framework/js/ajax-form.js" %}"></script>
-      <script src="{% static "rest_framework/js/csrf.js" %}"></script>
+      <!-- <script src="{% static "rest_framework/js/csrf.js" %}"></script> -->
       <script src="{% static "rest_framework/js/bootstrap.min.js" %}"></script>
       <script src="{% static "rest_framework/js/prettify-min.js" %}"></script>
       <script src="{% static "rest_framework/js/default.js" %}"></script>
