--- a/templates/rest_framework/login_base.html
+++ b/templates/rest_framework/login_base.html
@@ -15,7 +15,7 @@
         <div class="row-fluid">
           <div>
             <form action="{% url 'rest_framework:login' %}" role="form" method="post">
-              {% csrf_token %}
+<!--               {% csrf_token %} -->
               <input type="hidden" name="next" value="{{ next }}" />
 
               <div id="div_id_username" class="clearfix control-group {% if form.username.errors %}error{% endif %}">
